[metadata]
name = pyafsmon
summary = Monitoring for AFS
description-file =
    README.rst
author = Ian Wienand
author-email = ian@wienand.org
home-page = https://github.com/ianw/pyafsmon
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pyafsmon

[entry_points]
console_scripts =
    afsmon = pyafsmon.pyafsmon:main

